# nuklei

./: .gitignore  CMakeLists.txt  LICENSE.txt  Makefile  README.txt  SConstruct  scons.py
build_scripts/: SConscheck.py  SConscript.py  osx_ramdisk.sh
build_scripts/cmake/: CMakeLists.txt  README-experimental.txt
contrib/CImg/include/: CImg.h
contrib/libklr-2010_05_07/src/: SConscript.py  klr_train.cpp  klr_train.h  libklr.cpp  libklr.h
contrib/nanoflann/include/: nanoflann.hpp
contrib/scons-2.3.0/: scons.py
contrib/ticpp-r97/src/: SConscript.py  ticpp.h  tinyxmlparser.cpp
contrib/trimesh2-2.12/src/: SConscript.py  TriMesh_tstrips.cc  overlap.cc
doc_src/: Doxyfile  IMPLEMENTATION  INSTALL  README  doxygen.css  faq.txt  footer.html  header.html  index.txt  install.txt
doc_src/input/: acknowledgements.txt  background.txt  coding_guidelines.txt  env_config.txt  faq.txt  generic_kernels.txt  index.txt  install.txt  kernel.txt  matrix_transfo.txt  notes.txt  organization.txt  programming_paradigm.txt  top_groups.txt  type.txt
examples/: SConscript.py  evaluate.cpp  kde_evaluate.cpp  kde_sample.cpp  klr_classify.cpp  nuklei_example_evaluate.cpp  nuklei_example_sample.cpp  pose-estimation.sh  sample.cpp
examples/data/: README  bottle.xyz  density1.xml  density2.xml  points1.txt  points1.xml  points2.txt  points2.xml  points_class1.xml  points_class2.xml  spray.ply  spray_view.pcd  tabletop.xyz
examples/output/: evaluate.output
libnuklei/base/: Color.cpp  Definitions.cpp  Descriptor.cpp  Indenter.cpp  LinearAlgebra.cpp  Log.cpp  Math.cpp  ProgressIndicator.cpp  Random.cpp  RegionOfInterest.cpp  SConscript.py  Serial.cpp  logging_macros.sh  parallelizer.cpp
libnuklei/base/nuklei/: BoostSerialization.h  Color.h  Common.h  Definitions.h  Descriptor.h  Indenter.h  LinearAlgebra.h  LinearAlgebraTypes.h  Log.h  LoggingMacros.h  Match.h  Math.h  Plotter.h  ProgressIndicator.h  Random.h  RegionOfInterest.h  Serial.h  SerialDefinitions.h  Stopwatch.h  Types.h  assoc_storage.h  decoration.h  member_clone_ptr.h  nullable.h  parallelizer.h  parallelizer_decl.h  shared_container_iterator.h  simple_map.h
libnuklei/contrib/WildMagic5p4/: SConscript.py  Wm5Mutex.cpp
libnuklei/contrib/trsl-0.2.2/: SConscript.py
libnuklei/io/: BuiltinVTKObservation.cpp  BuiltinVTKObservationIO.cpp  CoViS3DObservation.cpp  CoViS3DObservationIO.cpp  CrdObservation.cpp  CrdObservationIO.cpp  EXRObservation.cpp  EXRObservationIO.cpp  IisObservation.cpp  IisObservationIO.cpp  NukleiObservation.cpp  NukleiObservationIO.cpp  Observation.cpp  ObservationIO.cpp  OffObservation.cpp  OffObservationIO.cpp  OsuTxtObservation.cpp  OsuTxtObservationIO.cpp  PCDObservation.cpp  PCDObservationIO.cpp  PCLBridge.cpp  PLYObservation.cpp  PLYObservationIO.cpp  PlaneProjection.cpp  PlaneProjectionCImg.cpp  RIFObservation.cpp  RIFObservationIO.cpp  SConscript.py  SerializedKernelObservation.cpp  SerializedKernelObservationIO.cpp  TxtObservation.cpp  TxtObservationIO.cpp
libnuklei/io/nuklei/: BuiltinVTKObservation.h  BuiltinVTKObservationIO.h  CoViS3DObservation.h  CoViS3DObservationIO.h  CrdObservation.h  CrdObservationIO.h  EXRObservation.h  EXRObservationIO.h  IisObservation.h  IisObservationIO.h  NukleiObservation.h  NukleiObservationIO.h  Observation.h  ObservationIO.h  OffObservation.h  OffObservationIO.h  OsuTxtObservation.h  OsuTxtObservationIO.h  PCDObservation.h  PCDObservationIO.h  PCLBridge.h  PLYObservation.h  PLYObservationIO.h  PlaneProjection.h  RIFObservation.h  RIFObservationIO.h  SerializedKernelObservation.h  SerializedKernelObservationIO.h  TxtObservation.h  TxtObservationIO.h
libnuklei/kernel/: Kernel.cpp  KernelCollection.cpp  KernelCollectionConvexHull.cpp  KernelCollectionFlexiblePoint.h  KernelCollectionJetFitting.cpp  KernelCollectionKDTree.cpp  KernelCollectionMesh.cpp  KernelCollectionPCA.cpp  KernelCollectionPartialView.cpp  KernelCollectionTypes.h  KernelLogisticRegression.cpp  KernelLogisticRegressor.cpp  PoseEstimator.cpp  SConscript.py
test/: SConscript.py  kde.cpp
tools/: SConscript.py  nuklei.cpp  tclap-wrappers.h
tools/util/: convert.cpp  info.cpp  kde.cpp  mcmc-pose-estimation.cpp  partial_view.cpp  pe.cpp  test.cpp  util.h
(+59 files in other folders)
